working countdown timer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- header -->
     <header>
         <h1>
-            <a href="./index.html">HOME</a>
+            <a href="./high-scores.html">HOME</a>
         </h1>
         <!-- nav skeleton -->
         <nav>
@@ -24,6 +24,31 @@
         </nav>
     </header>
     
+    <section id="timer-row" class="flex-row">
+        <div id="high score">
+            <h3 id="high-scores-link">
+                View High Scores
+            </h3>
+        </div>
+        <div>
+            <h3 id="timer">
+                
+            </h3>
+        </div>
+    </section>
+
+    <main class="flex-row">
+        <section id="question" class="question">
+            <h2>
+                Question Text
+            </h2>
+        </section>
+        <section id="answers"></section>
+    </main>
+
+    <script src="./assets/js/script.js"></script>
+
+
     <!-- footer -->
     <footer>
         <h2>
