adding heading similar to mockup

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         </nav>
     </header>
     
-    <section id="timer-row" class="flex-row">
+    <section id="timer-row" class="timer-row">
         <div id="high score">
             <h3 id="high-scores-link">
                 View High Scores
             </h3>
         </div>
-        <div>
-            <h3 id="timer">
-                
+        <div class="flex-row">
+            <h3 class="time">Time: </h3>
+            <h3 id="timer">               
             </h3>
         </div>
     </section>
