setting up first question

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 
     <main class="flex-row">
         <section id="question" class="question">
-            <h2>
-                Question Text
-            </h2>
+            <h2 id="main-title"></h2>
+            <p id="sub-title"></p>
+            <button type="button" id="start-button">
+            </button>
         </section>
         <section id="answers"></section>
     </main>
