finishing first question

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!-- header -->
     <header>
         <h1>
-            <a href="./high-scores.html">HOME</a>
+            <a href="./index.html">Home</a>
         </h1>
         <!-- nav skeleton -->
         <nav>
             <ul>
                 <li>
                     <!-- navigation element links-->
-                    <a href="#navlink">LINK</a>
+                    <a href="#navlink">View High Scores</a>
                 </li>
             </ul>
         </nav>
@@ -27,7 +27,7 @@
     <section id="timer-row" class="timer-row">
         <div id="high score">
             <h3 id="high-scores-link">
-                View High Scores
+                
             </h3>
         </div>
         <div class="flex-row">
@@ -52,9 +52,9 @@
 
     <!-- footer -->
     <footer>
-        <h2>
+        <h4>
             Made with <span style="color: red;">&#x2764;</span> in CO.
-        </h2>
+        </h4>
         <div>
             &copy; Kartik Jevaji
         </div>
