--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
         <h1>
             <a href="./index.html">Home</a>
         </h1>
+
         <!-- nav skeleton -->
         <nav>
             <ul>
+                <div class="flex-row">
+                    <h3 class="time">Time: </h3>
+                    <h3 id="timer">               
+                    </h3>
+                </div>
                 <li>
                     <!-- navigation element links-->
                     <a href="#navlink">View High Scores</a>
@@ -30,19 +36,14 @@
                 
             </h3>
         </div>
-        <div class="flex-row">
-            <h3 class="time">Time: </h3>
-            <h3 id="timer">               
-            </h3>
-        </div>
+
     </section>
 
     <main class="flex-row">
         <section id="question" class="question">
-            <h2 id="main-title"></h2>
+            <h2 id="main-title" class="main-title"></h2>
             <p id="sub-title"></p>
-            <button type="button" id="start-button">
-            </button>
+            <button type="button" id="start-button"></button>
         </section>
         <section id="answers"></section>
     </main>
