adding answerstatus elements

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <!-- nav skeleton -->
         <nav>
             <ul>
+                <!-- timer -->
                 <div class="flex-row">
                     <h3 class="time">Time: </h3>
                     <h3 id="timer">               
@@ -29,18 +30,11 @@
             </ul>
         </nav>
     </header>
-    
-    <section id="timer-row" class="timer-row">
-        <div id="high score">
-            <h3 id="high-scores-link">
-                
-            </h3>
-        </div>
-
-    </section>
 
     <main class="flex-row">
-        <section id="question" class="question">
+        <!-- question card -->
+        <section id="question">
+            <!-- question text -->
             <h2 id="main-title" class="main-title"></h2>
             <p id="sub-title"></p>
             <button type="button" id="start-button"></button>
@@ -48,8 +42,8 @@
         <section id="answers"></section>
     </main>
 
-    <script src="./assets/js/script.js"></script>
-
+    <!-- JS Link -->
+    <script src="./assets/js/scratch2.js"></script>
 
     <!-- footer -->
     <footer>
