--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </main>
 
     <!-- JS Link -->
-    <script src="./assets/js/scratch2.js"></script>
+    <script src="./assets/js/script.js"></script>
 
     <!-- footer -->
     <footer>
