adding buttons and  fixing button text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- header -->
     <header>
         <h1>
-            <a href="./index.html">Home</a>
+            <a href="./index.html" id="home">Home</a>
         </h1>
 
         <!-- nav skeleton -->
