minor css fixes and fixing links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <li>
                     <!-- navigation element links-->
-                    <a href="#navlink">View High Scores</a>
+                    <a id="highScoresLink" href="#" onclick="highScoresLink();return false;">View High Scores</a>
                 </li>
             </ul>
         </nav>
